--- a/install-software.yml
+++ b/install-software.yml
@@ -9,7 +9,6 @@
         name:
           - software-properties-common
           - apt-transport-https
-          - wget
 
     - name: Install the snap-store
       community.general.snap:
@@ -30,3 +29,28 @@
       ansible.builtin.apt:
         name: "code"
         update_cache: true
+
+    - name: Ensure the /opt/1Password directory exists
+      ansible.builtin.file:
+        path: /opt/1Password
+        state: directory
+
+    - name: Get 1password for arm64
+      ansible.builtin.get_url:
+        url: https://downloads.1password.com/linux/tar/stable/aarch64/1password-latest.tar.gz
+        dest: /tmp
+    
+    - name: Ensure files are untarred
+      ansible.builtin.unarchive:
+        src: /tmp/1password-latest.tar.gz
+        dest: /tmp
+
+    - name: Ensure files are moved to /opt/1Password
+      ansible.builtin.shell: mv /tmp/1password-*/* /opt/1Password
+
+    - name: Ensure 1Password installer is run
+      ansible.builtin.shell: /opt/1Password/after-install.sh
+      register: install_1password_result
+
+    - name: Ensure tmp files are removed
+      ansible.builtin.shell: rm -rf /tmp/1password-*
