--- a/install-software.yml
+++ b/install-software.yml
@@ -1,71 +1,34 @@
 ---
 - name: Install standard software for Ubuntu Desktop
   hosts: desktops
-  become: true
 
   tasks:
+    - name:
+      ansible.builtin.set_fact:
+        my_user: "{{ lookup('ansible.builtin.env', 'USER')}}"
+
     - name: Ensure pre-reqs are installed
       ansible.builtin.apt:
         name:
           - software-properties-common
           - apt-transport-https
+          - gnupg
+      become: true
+
+    - name: Gather the package facts
+      ansible.builtin.package_facts:
+        manager: auto
 
     - name: Install the snap-store
       community.general.snap:
         name: snap-store
         state: present
 
-    - name: Ensure Microsoft GPG key is added
-      ansible.builtin.apt_key:
-        url: https://packages.microsoft.com/keys/microsoft.asc
-        state: present
-
-    - name: Ensure apt repo is added for vs code
-      ansible.builtin.apt_repository:
-        repo: "deb [arch=arm64] https://packages.microsoft.com/repos/code stable main"
-        state: present
-
-    - name: Ensure vs code is installed
-      ansible.builtin.apt:
-        name: "code"
-        update_cache: true
-
-    - name: Ensure the /opt/1Password directory exists
-      ansible.builtin.file:
-        path: /opt/1Password
-        state: directory
-
-    - name: Get 1password for arm64
-      ansible.builtin.get_url:
-        url: https://downloads.1password.com/linux/tar/stable/aarch64/1password-latest.tar.gz
-        dest: /tmp
-    
-    - name: Ensure files are untarred
-      ansible.builtin.unarchive:
-        src: /tmp/1password-latest.tar.gz
-        dest: /tmp
-
-    - name: Ensure files are moved to /opt/1Password
-      ansible.builtin.shell: |
-        mv /tmp/1password-*/* /opt/1Password
-        /opt/1Password/after-install.sh
-      args:
-        chdir: /opt/1Password/
-        creates: 1password
-      register: install_1password_app
-
-    - name: Ensure 1Password CLI for Arm64 is installed
-      ansible.builtin.get_url:
-        url: https://downloads.1password.com/linux/debian/arm64/stable/1password-cli-arm64-latest.deb
-        dest: /tmp
-
-    - name: Install 1password-cli
-      ansible.builtin.apt:
-        deb: /tmp/1password-cli-arm64-latest.deb
-      register: install_1password_cli
-
-    - name: Ensure tmp files are removed
-      ansible.builtin.shell: rm -rf /tmp/1password-*
-      when:
-        - not install_1password_app.failed
-        - not install_1password_cli.failed
+    - name: Install application tasks
+      ansible.builtin.include_tasks: "{{ item }}"
+      loop: "{{ apps }}"
+      vars:
+        apps:
+          - 'vscode.yml'
+          - '1password.yml'
+          - 'docker.yml'
